<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_my_collection">

    <fragment
        android:id="@+id/nav_my_collection"
        android:name="com.pokemontcg.tracker.ui.home.HomeFragment"
        android:label="@string/nav_my_collection"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_set_detail"
            app:destination="@id/nav_set_detail"/>

    </fragment>

    <fragment
        android:id="@+id/nav_all"
        android:name="com.pokemontcg.tracker.ui.browse.BrowseFragment"
        android:label="@string/nav_all"
        tools:layout="@layout/fragment_browse">

        <action
            android:id="@+id/action_browse_to_set_detail"
            app:destination="@id/nav_set_detail"/>

    </fragment>

    <fragment
        android:id="@+id/nav_storage"
        android:name="com.pokemontcg.tracker.ui.sections.SectionPlaceholderFragment"
        android:label="@string/nav_storage"
        tools:layout="@layout/fragment_section_placeholder" />

    <fragment
        android:id="@+id/nav_wants"
        android:name="com.pokemontcg.tracker.ui.wants.WishlistsFragment"
        android:label="@string/nav_wants"
        tools:layout="@layout/fragment_wishlists" />

    <fragment
        android:id="@+id/nav_decks"
        android:name="com.pokemontcg.tracker.ui.sections.SectionPlaceholderFragment"
        android:label="@string/nav_decks"
        tools:layout="@layout/fragment_section_placeholder" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.pokemontcg.tracker.ui.sections.SectionPlaceholderFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_section_placeholder" />

    <fragment
        android:id="@+id/nav_set_detail"
        android:name="com.pokemontcg.tracker.ui.home.SetDetailFragment"
        android:label="@string/set_detail_title"
        tools:layout="@layout/fragment_set_detail">

        <argument
            android:name="setId"
            app:argType="string"/>

    </fragment>

    <fragment
        android:id="@+id/nav_wishlist_detail"
        android:name="com.pokemontcg.tracker.ui.wants.WishlistDetailFragment"
        android:label="@string/wishlist_detail_title"
        tools:layout="@layout/fragment_wishlist_detail">

        <argument
            android:name="wishlistId"
            app:argType="long" />

    </fragment>

</navigation>
